<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_title"/>

        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_input"
            android:title="@string/login"/>

        <item android:id="@+id/nav_registration"
            android:icon="@drawable/ic_create"
            android:title="@string/menu_registration"/>

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_title"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>

        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_outline"
            android:title="@string/logout"/>

    </group>



</menu>