<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/custom_gradient"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar">

        </include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:id="@+id/log_email"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_action_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/log_email"
                android:importantForAutofill="no"/>

            <EditText
                android:id="@+id/log_password"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_action_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/log_password"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/log_btn"
                android:background="@drawable/custom_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_btn" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/not_registered" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:text="@string/register" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/header_layout"
        android:id="@+id/navigation_view"/>


</androidx.drawerlayout.widget.DrawerLayout>